projects/ngx-formentry/src/form-entry/form-renderer/form-renderer.component.scss
@use '@carbon/styles/scss/type';
@use '@carbon/styles/scss/spacing';

.button-set {
  margin-top: 1rem;
}

.nav-button {
  border-top: 1px solid #dde1e6;
  height: 5rem;
  max-width: 50%;
  min-width: 50%;
  padding-block: spacing.$spacing-02;
}

.nav-link {
  min-width: 100%;
  display: flex;
  align-items: flex-start;
  flex-direction: column;
}

.nav-link-text {
  margin-top: 0.125rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: calc(100% - #{spacing.$spacing-02});
  @include type.type-style('heading-03');
}

.nav-label {
  @include type.type-style('label-01');
}

ul {
  list-style-type: none;
  margin: 2px auto;
  position: relative;
}

li {
  display: block;
  padding: 10px 20px;
  transition: all 0.3s ease-in;
  border-bottom: 4px solid transparent;
}

li:hover {
  border-bottom: 4px solid white;
  opacity: 0.7;
  cursor: pointer;
}

.owl-theme .owl-controls .owl-nav {
  position: absolute;
  width: 100%;
  top: 0;
}

.owl-theme .owl-controls .owl-nav [class*='owl-'] {
  position: absolute;
  background: none;
  color: black;
}

.owl-theme .owl-controls .owl-nav [class*='owl-']:hover {
  background: none;
  color: black;
}

.owl-theme .owl-controls .owl-nav .owl-next {
  right: 0;
  transform: translate(120%);
}

.owl-theme .owl-controls .owl-nav .owl-prev {
  left: 0;
  transform: translate(-120%);
}

.disabled {
  opacity: 0.5;
  pointer-events: none;
}

.select2-container {
  margin-top: -5px;
}

.btn {
  padding: 0px 12px !important;
}

.form-tooltip {
  color: rgb(51, 122, 183);
  display: inline-block;
}

.question-info {
  opacity: 0;
  height: 0px;
  display: none;
  transition-duration: opacity 1s ease-out;
  transition-delay: 0.5s;
  padding-top: 2px;
  padding-bottom: 2px;
  color: #696969;
  border-style: ridge;
  border-width: 1px;
  border-color: #337ab7;
  margin-top: 0.25rem;
}

.hide-info {
  display: none;
  height: 0px;
}

.form-tooltip:hover ~ .question-info {
  display: block;
  opacity: 1;
  height: auto;
}

.form-tooltip .tooltipcontent::after {
  content: ' ';
  position: absolute;
  bottom: 100%; /* At the top of the tooltip */
  right: 0%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-top-color: transparent;
  border-right-color: transparent;
  border-bottom-color: #337ab7;
  border-left-color: transparent;
}

ng-select.form-control {
  padding-top: 0;
  height: auto;
  padding-bottom: 0;
}

.forms-dropdown-menu {
  max-height: 450px;
  overflow-y: scroll;
}

.no-border {
  border: 0;
  box-shadow: none;
}

.text-danger {
  color: var(--cds-support-01, #da1e28);
}

.text-warn {
  color: #eea616;
}

.error {
  margin-top: 0.25rem;
}

.warning {
  display: flex;
  align-items: center;
  margin: 0 0.25rem 0.75rem;

  svg {
    margin-right: 0.25rem;
  }
}

.afe-control {
  margin-bottom: 0.125rem;
}

[hidden] {
  display: none !important;
}

.accordion-content-dark {
  background-color: #f4f4f4;
  padding-right: 1rem;
}

.accordion-content-override {
  box-sizing: content-box;
  border-bottom: none;
  padding: 0 0;
  overflow-wrap: break-word;
}

.accordion-content-override:hover {
  opacity: unset;
  border-bottom: none;
}

.question-area {
  margin-bottom: 0.5rem;
  width: 100%;
  min-width: 18rem;
  & > label {
    overflow-wrap: break-word;
  }
}

.in-line {
  display: inline-block;
  padding-right: 0.5rem;
}

.use-value {
  overflow-wrap: break-word;
}

.custom-text-area {
  width: 100%;
}

.container {
  .cds--inline-notification--error {
    display: flex;
    align-items: center;

    svg {
      margin-left: 1rem;
      margin-block-start: 0;
    }
  }

  .cds--inline-notification--low-contrast::before {
    border-width: 1px 1px 0 0;
  }
}

